Fix for some issues

--- a/public/about.html
+++ b/public/about.html
@@ -41,7 +41,7 @@
       <div class="content-area">
         <!-- Top nav -->
         <nav class="top-nav nav">
-          <h1><a href="index.html">About</a></h1>
+          <h1><a href="about.html">About</a></h1>
         </nav>
 
         <!-- About content -->
@@ -71,11 +71,59 @@
             <div class="apis-libraries">
               <h3>APIs and Libraries</h3>
               <ul>
-                <li>Open-Meteo (Weather Forecast and Geocoding APIs)</li>
-                <li>Tomorrow.io Weather Icons</li>
-                <li>OpenStreetMap</li>
-                <li>Chart.js</li>
-                <li>Leaflet.js</li>
+                <li>
+                  <a
+                    href="https://open-meteo.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Open-Meteo</a
+                  >
+                  (<a
+                    href="https://open-meteo.com/en/docs"
+                    target="_blank"
+                    rel="noopener"
+                    >Weather Forecast</a
+                  >
+                  and
+                  <a
+                    href="https://open-meteo.com/en/docs/geocoding-api"
+                    target="_blank"
+                    rel="noopener"
+                    >Geocoding APIs</a
+                  >)
+                </li>
+                <li>
+                  <a
+                    href="https://github.com/Tomorrow-IO-API/tomorrow-weather-codes"
+                    target="_blank"
+                    rel="noopener"
+                    >Tomorrow.io Weather Icons</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.openstreetmap.org/"
+                    target="_blank"
+                    rel="noopener"
+                    >OpenStreetMap</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.chartjs.org/"
+                    target="_blank"
+                    rel="noopener"
+                    >Chart.js</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://leafletjs.com/"
+                    target="_blank"
+                    rel="noopener"
+                    >Leaflet.js</a
+                  >
+                </li>
               </ul>
             </div>
 
@@ -88,7 +136,6 @@
                   href="https://adeolu.netlify.app"
                   target="_blank"
                   rel="noopener"
-                  style="text-decoration: none; color: #fff"
                   ><strong>Oluwatobiloba Adegbaju</strong></a
                 >.
               </p>
