--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
       <div class="content-area">
         <!-- Top nav -->
         <nav class="top-nav">
+          <h1><a href="index.html">Hello 👋</a></h1>
           <!-- Search bar -->
           <form class="search-bar">
             <input
@@ -156,57 +157,56 @@
           <div class="dashboard-box box-3" id="forecast">
             <h2>7-Day Forecast</h2>
             <div class="forecast-grid">
-              <!-- Days of the week -->
-              <div class="days" id="sun">
-                <p>Sun</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="mon">
-                <p>Mon</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="tue">
-                <p>Tue</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="wed">
-                <p>Wed</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="thu">
-                <p>Thu</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="fri">
-                <p>Fri</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
                   <span id="min-temp"></span>
                 </p>
               </div>
-              <div class="days" id="sat">
-                <p>Sat</p>
+              <div class="days">
+                <p></p>
                 <img src="" alt="Weather Icon" class="forecast-icon" />
                 <p id="max-min-temp">
                   <span id="max-temp"></span>
