--- a/public/search-history.html
+++ b/public/search-history.html
@@ -42,7 +42,7 @@
       <div class="content-area">
         <!-- Top nav -->
         <nav class="top-nav nav">
-          <h1><a href="index.html">Recent Search History</a></h1>
+          <h1><a href="search-history.html">Recent Search History</a></h1>
         </nav>
 
         <!-- Search history section -->
@@ -59,7 +59,9 @@
               </div>
             </div>
 
-            <ul id="history-list"></ul>
+            <ul id="history-list">
+              <!-- Search history items will be inserted here -->
+            </ul>
           </div>
         </div>
       </div>
