Responsiveness for small screens

--- a/public/about.html
+++ b/public/about.html
@@ -159,5 +159,10 @@
         </div>
       </div>
     </div>
+
+    <!-- Mobile and tablet message -->
+    <div class="mobile-message">
+      <p>Check on a laptop or desktop</p>
+    </div>
   </body>
 </html>
