--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       crossorigin=""
     ></script>
     <script src="scripts.js" defer></script>
-    <title>Home</title>
+    <title>Home — Weatherly</title>
   </head>
   <body>
     <!-- Main container -->
