--- a/public/search-history.html
+++ b/public/search-history.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
-    <title>Search History — Weatherly</title>
+    <title>Search History - Weatherly</title>
   </head>
   <body>
     <!-- Main container -->
