--- a/public/about.html
+++ b/public/about.html
@@ -56,7 +56,7 @@
               <h2>🌤️ Weatherly Overview</h2>
               <p>
                 Weatherly is a weather app that provides real-time weather
-                conditions and 7-day forecasts for cities around the world.
+                conditions, forecasts, and metrics for cities around the world.
               </p>
             </div>
 
