Add link animation

--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,11 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌤️</text></svg>"
     />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
     <title>About - Weatherly</title>
@@ -146,19 +151,15 @@
               </p>
 
               <!-- GitHub link -->
-              <p>
-                <a
-                  href="https://github.com/ade-olu"
-                  target="_blank"
-                  rel="noopener"
-                >
-                  <img
-                    src="icons/github.svg"
-                    alt="GitHub"
-                    style="width: 24px; height: auto; margin-top: 1rem"
-                  />
-                </a>
-              </p>
+              <a
+                href="https://github.com/ade-olu"
+                target="_blank"
+                rel="noopener"
+                ><i
+                  class="fa fa-github"
+                  style="font-size: 28px; margin-top: 1rem"
+                ></i>
+              </a>
             </div>
           </div>
         </div>
