--- a/public/about.html
+++ b/public/about.html
@@ -168,7 +168,7 @@
 
     <!-- Mobile and tablet message -->
     <div class="mobile-message">
-      <p>Check on a laptop or desktop</p>
+      <p>Please check on a laptop or desktop</p>
     </div>
   </body>
 </html>
